--- a/freecodecamp-tribute-page/local/style.css
+++ b/freecodecamp-tribute-page/local/style.css
@@ -24,11 +24,21 @@ p {
   margin: auto;
 }
 
+.content_wrapper {
+  display: flex;
+}
+
+.content {
+  height: 60vh;
+  flex-grow: 1;
+  text-align: center;
+}
+
 #image {
-  display: block;
+  max-height: 100%;
   max-width: 100%;
-  height: auto;
-  border-radius: 1em; 
+  object-fit: cover;
+  border-radius: 1em;
 }
   
 #img-caption {
@@ -46,7 +56,7 @@ p {
   margin: auto;
   max-width: 80%;
   font-size: 0.85em;
-} 
+}
 
 /*
 Fluid typography adapted from https://www.madebymike.com.au/writing/fluid-type-calc-examples/
